--- a/index.html
+++ b/index.html
@@ -4,41 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <title>Zerodha - Online stock trading at lowest prices from India's ...</title>
 </head>
 <body style="font-family:var(--bs-body-font-family);">
-<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom position-fixed w-100">
-  <a class="navbar-brand ms-3" href="#"><img src="/images/logo.svg"  width="129" alt=""></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav  ms-auto pe-5">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Signup</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Products</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Support</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+ <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom position-fixed w-100">
+    <a class="navbar-brand ms-3" href="#"><img src="images/logo.svg"  width="129" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav  ms-auto pe-5">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Support</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
 <section></section>
   <div class="container">
     <div class="row">
       <div class="d-flex justify-content-centre">
         <div class=" mx-auto">
-          <img class="d-none d-sm-block img-num" src="/images/landing.png" alt="">
-          <img class="d-block w-100 d-sm-none" src="/images/landing.png" alt="">
+          <img class="d-none d-sm-block img-num" src="images/landing.png" alt="">
+          <img class="d-block w-100 d-sm-none" src="images/landing.png" alt="">
         </div>
     </div>
     </div>
@@ -69,7 +71,7 @@
   <div class="container">
     <div class="row mt-5">
       <div class="col-md-6 mt-3">
-        <img src="/images/largest-broker.svg" width="80%" alt="">
+        <img src="images/largest-broker.svg" width="80%" alt="">
       </div>
       <div class="col-md-6 mt-3">
         <h1>Largest stock broker in India</h1>
@@ -93,7 +95,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/images/press-logos.png" class="img-hover" alt="">
+          <img src="images/press-logos.png" class="img-hover" alt="">
         </div>
       </div>
       
@@ -126,7 +128,7 @@
     <div class="row">
       <div class="d-flex justify-content-centre">
         <div class="mx-auto">
-         <a href="https://zerodha.com/products"><img src="/images/ecosystem.png" class="img-fluid" alt=""></a>
+         <a href="https://zerodha.com/products"><img src="images/ecosystem.png" class="img-fluid" alt=""></a>
         </div>
       </div>
     </div>
@@ -179,7 +181,7 @@
   <div class="container">
     <div class="row mt-5 pt-5">
       <div class="col-md-6">
-        <img src="/images/index-education.svg" width="100%" alt="">
+        <img src="images/index-education.svg" width="100%" alt="">
       </div>
       <div class="col-md-6">
         <div class="row">
@@ -227,8 +229,8 @@
       <div class="row">
           <div class="col-md-3">
               <div class="row">
-                  <img class="imglogo img-fluid d-block d-md-none" style="width:40%;" src="/images/logo.svg"  alt="">
-                  <img class="imglogo img-fluid w-100 d-none d-md-block" src="/images/logo.svg"  alt="">
+                  <img class="imglogo img-fluid d-block d-md-none" style="width:40%;" src="images/logo.svg"  alt="">
+                  <img class="imglogo img-fluid w-100 d-none d-md-block" src="images/logo.svg"  alt="">
               </div>
               <div class="row">
                   <p class="text text-secondary text-nowrap watermark">© 2010 - 2022, Zerodha Broking Ltd.</p>
@@ -347,8 +349,6 @@
 
 
     <!--Bootsrap JS-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
